# LibCppSpc

./: .gitignore  CMakeLists.txt  README.md
include/: BinaryField.h  BinaryTag.h  DataStructure.h  DateField.h  EmulatorField.h  ExtendedTag.h  ExtendedTagItem.h  Field.h  File.h  FileStream.h  Format.h  Header.h  ID666BinaryTag.h  ID666ExtendedItem.h  ID666ExtendedTag.h  ID666TagType.h  ID666TextTag.h  LibCppSpc.h  NumericField.h  NumericType.h  SetCommand.h  SpcBinaryField.h  SpcDateField.h  SpcEmulatorField.h  SpcField.h  SpcFile.h  SpcFileStream.h  SpcFormat.h  SpcHeader.h  SpcNumericField.h  SpcNumericType.h  SpcStruct.h  SpcTextField.h  SpcTrackField.h  StringDelimiter.h  StringSegment.h  StringSegmentType.h  StringToken.h  StringTokenizer.h  StringValueType.h  (+4 more)
src/: BinaryTag.cpp  CMakeLists.txt  DataStructure.cpp  DateField.cpp  EmulatorField.cpp  ExtendedTag.cpp  ExtendedTagItem.cpp  File.cpp  FileStream.cpp  Format.cpp  Header.cpp  ID666BinaryTag.cpp  ID666ExtendedItem.cpp  ID666ExtendedTag.cpp  ID666TextTag.cpp  NumericField.cpp  SpcDateField.cpp  SpcEmulatorField.cpp  SpcFile.cpp  SpcFileStream.cpp  SpcFormat.cpp  SpcHeader.cpp  SpcNumericField.cpp  SpcStruct.cpp  SpcTextField.cpp  SpcTrackField.cpp  StringDelimiter.cpp  StringToken.cpp  StringTokenizer.cpp  TextField.cpp  TextTag.cpp  TrackField.cpp
